--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 *{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 body{
     background-color: #141619;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
+
 li{
     list-style: none;
 }
@@ -15,9 +17,11 @@ li{
 /*HEADER*/
 #nav{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     padding: 30px;
     align-items: center;
+
 }
 
 .logo img{
@@ -25,8 +29,11 @@ li{
 }
 
 .menu-nav{
+    
     display: flex;
-    margin-right: 60px;
+    margin-right: 10%;
+    margin-left: 18%;
+    align-items: center;
 }
 
 .menu-nav ul{
@@ -45,7 +52,7 @@ li{
 }
 
 .comment{
-    margin-right: 40px;
+    margin-left: 8%;
 }
 
 .comment p{
@@ -59,6 +66,7 @@ li{
 }
 
 .introduction{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -74,7 +82,7 @@ li{
 }
 
 .linear-gradient-title{
-    font-size: 5.5rem;
+    font-size: clamp(2.5rem, 5.5vw, 5.5rem);
     font-weight: 500;
     font-style: normal;
     background-image: linear-gradient(to bottom, #CCCCCC, #A55FE6, #571891);
@@ -96,7 +104,7 @@ li{
     font-style: normal;
     color: #E5E5E5;
     text-align: center;
-    font-size: 20px;
+    font-size: clamp(1rem, 2vw, 1.4rem);
     line-height: 1.5;
 
 }
@@ -114,16 +122,427 @@ li{
     border: none;
 }
 
+
+/*NOSSOS OBJETIVOS*/
+#scope-container{
+    display: flex;
+    height: 90vh;
+    flex-direction: column;
+    align-items: center
+}
+#scope-title{
+    font-size: 3.8rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+}
+
+#scope-cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 85%;
+    height: 78%;
+    justify-items: center;
+    align-items: end;
+}
+
+.scope-card{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    background-color: transparent;
+    width: 90%;
+    height: 80%;
+    border: 1px solid #6D00A0;
+}
+
+#mission-icon{
+    scale: 50%;
+    margin-top: 2px;
+}
+
+#vision-icon{
+    scale: 50%;
+    margin-top: 24px;
+}
+#values-icon{
+    scale: 50%;
+    margin-top: px;
+}
+
+.scope-title{
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-top: 0.6rem;
+    margin-left: 2.1rem;
+    color: #E7B4FF;
+    font-family: "Inter", sans-serif;
+}
+
+.scope-text{
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin-top: 1.6rem;
+    margin-left: 2.1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+}
+
+/*SOBRE NÓS*/
+
+#about-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 12rem;
+}
+
+#about-us-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+#about-us-title{
+    font-size: 3.8rem;
+    font-family: "Inter", sans-serif;
+    color: #ffffff;
+}
+
+#about-us-text{
+    margin-top: 1.2rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.8;
+    text-align: center;
+}
+
+#story-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#story-text-container{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10rem;
+}
+
+#story-title{
+    font-size: 2.8rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+    color: #ffffff;
+}
+
+#story-text{
+    font-size: 1.4rem;
+    font-weight: 200;
+    margin-top: 1.6rem;
+    margin-left: 1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+}
+
+#story-icon{
+    scale: 58%;
+}
+
+#benefits-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#benefits-icon{
+    width: 40%;
+    margin-left: 8rem;
+}
+
+#benefits-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-right: 10rem;
+}
+
+#benefits-title{
+    font-size: 2.8rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+    color: #ffffff;
+}
+
+#benefits-subtiltle{
+    font-size: 1.4rem;
+    font-weight: 600;
+    margin-top: 1.6rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.5;
+}
+
+#benefits-text{
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+}
+
+.read-more{
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-top: 2.4rem;
+    font-family: "Inter", sans-serif;
+    color: #E7B4FF;
+}
+
+#collaborators-container{
+    margin-top: 2%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#collaborators-title{
+    font-size: 4rem;
+    font-weight: 500;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.4;
+    letter-spacing: 0.2rem;
+    margin-right: 300px;
+}
+
+#collaborators-icon{
+    width: 100%;
+
+}
+
+#comments-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10%;
+}
+
+#comments-title{
+    font-size: 3.5rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    margin-bottom: 2rem;
+}
+
+#comments-text{
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-top: 1.4rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 2;
+    text-align: justify;
+}
+
+#comment-icon{
+    width: 30px;
+    margin-left: 25px;
+    margin-right: 20px;
+}
+
+#comment-input-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: 1px solid #A55FE6;
+    width: 790px;
+    height: 60px;
+    margin-top: 4%;
+}
+
+#comment-input{
+    border-color: transparent;
+    color: #ffffff;
+    background-color: transparent;
+    animation: none;
+    transition: none;
+    font-size: 1.2rem;
+}
+
+input:focus {
+  outline: none;
+}
+
+input::placeholder { 
+    color: #A55FE6; 
+}
+
+#comment-click{
+    font-size: 1.1rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    color: #ffffff;
+    margin-top: 6%;
+}
+
+#comment-message-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 30px;
+}
+
+#comment-message{
+    font-size: 0.9rem;
+    font-family: "Inter", sans-serif;
+    font-weight: 200;
+    color: #ffffff
+}
+
+#newo-icon{
+    width: 100px;
+}
+
+label{
+    width:0.5px;
+    height: 35px;
+    background-color: #666666;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+#about-sime-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 15%;
+}
+
+#title-about-sime{
+    font-size: 4rem;
+    font-weight: 500;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.4;
+    letter-spacing: 0.2rem;
+    margin-left: 200px;
+    margin-right: 180px;
+}
+
+#about-sime-container-text{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.text-about-sime{
+    font-size: 1.4rem;
+    font-weight: 200;
+    margin-top: 1.5rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+}
+
+#contact-us-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20%;
+}
+
+#title-contact-us{
+    font-size: 4rem;
+    font-weight: 500;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    margin-left: 200px;
+    margin-right: 180px;
+}
+
+#text-contact-us{
+    text-align: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+    font-weight: 200;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.8;
+}
+
+
+/*Elementos sobrepostos (Circulos)
+
+.c1, .c2, .c3, .c4, .c5 {
+    position: absolute;
+    filter: blur(250px);
+    z-index: -1;
+    border-radius: 50%;
+}
+.c1 {
+    width: 638px;
+    height: 577px;
+    left: 19px;
+    top: 53px;
+    background: #A55FE6;
+}
+.c2 {
+    width: 503px;
+    height: 455px;
+    left: 291px;
+    top: 472px;
+    background: #330063;
+    filter: blur(150px);
+}
+.c3 {
+    width: 371px;
+    height: 335px;
+    left: 1520px;
+    top: 1699px;
+    background: #6D00A0;
+    filter: blur(200px);
+}
+.c4 {
+    width: 371px;
+    height: 335px;
+    left: -42px;
+    top: 1957px;
+    background: #6D00A0;
+    filter: blur(200px);
+}
+.c5 {
+    width: 210px;
+    height: 190px;
+    left: 192px;
+    top: 1762px;
+    background: #D986FF;
+    filter: blur(150px);
+}
+*/
+
 hr{
+
     border-color: rgb(143, 140, 140);
     border-width: 1px;
 }
+
 /*FOOTER*/
 footer{
     display: flex;
     flex-direction: column;
-    margin: 6% 10% 0% 14%;
-    padding: 0% 0% 5% 0%;
+    margin: 4% 10% 0% 14%;
+    padding: 0% 0% 2% 0%;
 
 }
 .info{
@@ -163,7 +582,7 @@ footer{
 }
 .contact-icons img{
     width: 1.8rem;
-    margin-top: 10%;
+    margin-top: 8%;
     margin-right: 2rem;
 }
 
