--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ body{
 
 li{
     list-style: none;
+    text-wrap: nowrap;
 }
 
 /*HEADER*/
@@ -24,8 +25,10 @@ li{
 
 }
 
+
+
 .logo img{
-    margin-left: 32px;
+    margin-left: 1.667vw;
 }
 
 .menu-nav{
@@ -82,7 +85,7 @@ li{
 }
 
 .linear-gradient-title{
-    font-size: clamp(2.5rem, 5.5vw, 5.5rem);
+    font-size: clamp(45px, 5.5vw, 7.5vw);
     font-weight: 500;
     font-style: normal;
     background-image: linear-gradient(to bottom, #CCCCCC, #A55FE6, #571891);
@@ -95,7 +98,7 @@ li{
 .subtitle{
     font-weight: 500;
     font-style: normal;
-    font-size: 80px;
+    font-size: clamp(40px, 4.167vw, 6.167vw);
     color: white;
 }
 .introduction-text{
@@ -111,33 +114,36 @@ li{
 .linear-gradient-btn{
     margin-top: 1.5rem ;
     margin-bottom: 16% ;
-    width: 200px;
-    height: 60px;
+    width: clamp(100px, 10.417vw, 12.417vw);
+    height: clamp(40px, 3.125vw, 5.125vw);
     background-image: linear-gradient(to bottom right, #AE8DCD, #A55FE6, #7C3ABA, #571891);
     font-weight: 500;
     font-style: normal;
     color: white;
-    font-size: 20px;
+    font-size: clamp(15px, 1.042vw, 2.042vw);
     border-radius: 3px;
     border: none;
+    text-wrap: nowrap;
 }
 
 
 /*NOSSOS OBJETIVOS*/
-#scope-container{
+.scope-container{
     display: flex;
     height: 90vh;
     flex-direction: column;
     align-items: center
 }
-#scope-title{
-    font-size: 3.8rem;
+
+.scope-title{
+    font-size: clamp(32px, 5.3vw, 7.3vw);
     font-family: "Inter", sans-serif;
     font-weight: 500;
     color: #ffffff;
+    text-wrap: nowrap;
 }
 
-#scope-cards{
+.scope-cards{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 85%;
@@ -146,32 +152,47 @@ li{
     align-items: end;
 }
 
+@media only screen and (max-width: 600px){
+    .scope-cards{
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+        height: 40vh;
+        justify-items: center;
+        align-items: center;
+        gap: 30px;
+        margin-top: 30px;
+    }
+
+}
+
 .scope-card{
     display: flex;
     flex-direction: column;
     align-items: start;
     background-color: transparent;
+    border: 1px solid #6D00A0;
     width: 90%;
     height: 80%;
-    border: 1px solid #6D00A0;
 }
 
-#mission-icon{
+
+.mission-icon{
     scale: 50%;
     margin-top: 2px;
 }
 
-#vision-icon{
+.vision-icon{
     scale: 50%;
     margin-top: 24px;
 }
-#values-icon{
+
+.values-icon{
     scale: 50%;
-    margin-top: px;
 }
 
-.scope-title{
-    font-size: 1.8rem;
+.scope-title-card{
+    font-size: clamp(25px, 3vw, 5vw);
     font-weight: 700;
     margin-top: 0.6rem;
     margin-left: 2.1rem;
@@ -191,26 +212,26 @@ li{
 
 /*SOBRE NÓS*/
 
-#about-container{
+.about-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 12rem;
 }
 
-#about-us-container{
+.about-us-container{
     display: flex;
     flex-direction: column;
     align-items: center
 }
 
-#about-us-title{
+.about-us-title{
     font-size: 3.8rem;
     font-family: "Inter", sans-serif;
     color: #ffffff;
 }
 
-#about-us-text{
+.about-us-text{
     margin-top: 1.2rem;
     color: #ffffff;
     font-family: "Inter", sans-serif;
@@ -220,26 +241,26 @@ li{
     text-align: center;
 }
 
-#story-container{
+.story-container{
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#story-text-container{
+.story-text-container{
     display: flex;
     flex-direction: column;
     margin-left: 10rem;
 }
 
-#story-title{
+.story-title{
     font-size: 2.8rem;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     color: #ffffff;
 }
 
-#story-text{
+.story-text{
     font-size: 1.4rem;
     font-weight: 200;
     margin-top: 1.6rem;
@@ -249,37 +270,37 @@ li{
     line-height: 1.6;
 }
 
-#story-icon{
+.story-icon{
     scale: 58%;
 }
 
-#benefits-container{
+.benefits-container{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
 
-#benefits-icon{
+.benefits-icon{
     width: 40%;
     margin-left: 8rem;
 }
 
-#benefits-text-container{
+.benefits-text-container{
     display: flex;
     flex-direction: column;
     align-items: start;
     margin-right: 10rem;
 }
 
-#benefits-title{
+.benefits-title{
     font-size: 2.8rem;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     color: #ffffff;
 }
 
-#benefits-subtiltle{
+.benefits-subtiltle{
     font-size: 1.4rem;
     font-weight: 600;
     margin-top: 1.6rem;
@@ -288,7 +309,7 @@ li{
     line-height: 1.5;
 }
 
-#benefits-text{
+.benefits-text{
     font-size: 1.4rem;
     font-weight: 300;
     margin-top: 1rem;
@@ -305,14 +326,14 @@ li{
     color: #E7B4FF;
 }
 
-#collaborators-container{
+.collaborators-container{
     margin-top: 2%;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#collaborators-title{
+.collaborators-title{
     font-size: 4rem;
     font-weight: 500;
     margin-top: 1rem;
@@ -323,19 +344,19 @@ li{
     margin-right: 300px;
 }
 
-#collaborators-icon{
+.collaborators-icon{
     width: 100%;
 
 }
 
-#comments-container{
+.comments-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 10%;
 }
 
-#comments-title{
+.comments-title{
     font-size: 3.5rem;
     font-family: "Inter", sans-serif;
     font-weight: 500;
@@ -343,7 +364,7 @@ li{
     margin-bottom: 2rem;
 }
 
-#comments-text{
+.comments-text{
     font-size: 1.3rem;
     font-weight: 300;
     margin-top: 1.4rem;
@@ -353,13 +374,13 @@ li{
     text-align: justify;
 }
 
-#comment-icon{
+.comment-icon{
     width: 30px;
     margin-left: 25px;
     margin-right: 20px;
 }
 
-#comment-input-container{
+.comment-input-container{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -369,7 +390,7 @@ li{
     margin-top: 4%;
 }
 
-#comment-input{
+.comment-input{
     border-color: transparent;
     color: #ffffff;
     background-color: transparent;
@@ -386,7 +407,7 @@ input::placeholder {
     color: #A55FE6; 
 }
 
-#comment-click{
+.comment-click{
     font-size: 1.1rem;
     font-family: "Inter", sans-serif;
     font-weight: 500;
@@ -394,21 +415,21 @@ input::placeholder {
     margin-top: 6%;
 }
 
-#comment-message-container{
+.comment-message-container{
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-top: 30px;
 }
 
-#comment-message{
+.comment-message{
     font-size: 0.9rem;
     font-family: "Inter", sans-serif;
     font-weight: 200;
     color: #ffffff
 }
 
-#newo-icon{
+.newo-icon{
     width: 100px;
 }
 
@@ -420,14 +441,14 @@ label{
     margin-right: 20px;
 }
 
-#about-sime-container{
+.about-sime-container{
     display: flex;
     flex-direction: row;
     align-items: center;
     margin-top: 15%;
 }
 
-#title-about-sime{
+.title-about-sime{
     font-size: 4rem;
     font-weight: 500;
     margin-top: 1rem;
@@ -439,7 +460,7 @@ label{
     margin-right: 180px;
 }
 
-#about-sime-container-text{
+.about-sime-container-text{
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -454,14 +475,14 @@ label{
     line-height: 1.6;
 }
 
-#contact-us-container{
+.contact-us-container{
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20%;
 }
 
-#title-contact-us{
+.title-contact-us{
     font-size: 4rem;
     font-weight: 500;
     color: #ffffff;
@@ -470,7 +491,7 @@ label{
     margin-right: 180px;
 }
 
-#text-contact-us{
+.text-contact-us{
     text-align: center;
     margin-top: 1.5rem;
     margin-bottom: 1rem;
@@ -585,5 +606,3 @@ footer{
     margin-top: 8%;
     margin-right: 2rem;
 }
-
-
