--- a/css/index.css
+++ b/css/index.css
@@ -25,8 +25,6 @@ li{
 
 }
 
-
-
 .logo img{
     margin-left: 1.667vw;
 }
@@ -85,7 +83,7 @@ li{
 }
 
 .linear-gradient-title{
-    font-size: clamp(45px, 5.5vw, 7.5vw);
+    font-size: clamp(45px, 6vw, 7.5vw);
     font-weight: 500;
     font-style: normal;
     background-image: linear-gradient(to bottom, #CCCCCC, #A55FE6, #571891);
@@ -98,7 +96,7 @@ li{
 .subtitle{
     font-weight: 500;
     font-style: normal;
-    font-size: clamp(40px, 4.167vw, 6.167vw);
+    font-size: clamp(40px, 6vw, 6.167vw);
     color: white;
 }
 .introduction-text{
@@ -107,7 +105,7 @@ li{
     font-style: normal;
     color: #E5E5E5;
     text-align: center;
-    font-size: clamp(1rem, 2vw, 1.4rem);
+    font-size: clamp(16px, 2vw, 1.4rem);
     line-height: 1.5;
 
 }
@@ -136,7 +134,7 @@ li{
 }
 
 .scope-title{
-    font-size: clamp(32px, 5.3vw, 7.3vw);
+    font-size: clamp(32px, 5vw, 7.3vw);
     font-family: "Inter", sans-serif;
     font-weight: 500;
     color: #ffffff;
@@ -178,32 +176,39 @@ li{
 
 
 .mission-icon{
-    scale: 50%;
-    margin-top: 2px;
+    max-width: clamp(45px, 4.6vw, 8vw);
+    margin-top: clamp(20px, 2vw, 4vw);
+    margin-left: clamp(26px, 2vw, 4vw);
+    margin-bottom: clamp(10px, 1vw, 4vw);
 }
 
 .vision-icon{
-    scale: 50%;
-    margin-top: 24px;
+    max-width: clamp(45px, 4.6vw, 8vw);
+    margin-top: clamp(20px, 2vw, 4vw);
+    margin-left: clamp(26px, 2vw, 4vw);
+    margin-bottom: clamp(10px, 1vw, 4vw);
 }
 
 .values-icon{
-    scale: 50%;
+    max-width: clamp(45px, 4.6vw, 8vw);
+    margin-top: clamp(20px, 2vw, 4vw);
+    margin-left: clamp(26px, 2vw, 4vw);
+    margin-bottom: clamp(10px, 1vw, 4vw);
 }
 
 .scope-title-card{
     font-size: clamp(25px, 3vw, 5vw);
     font-weight: 700;
-    margin-top: 0.6rem;
+    margin-top: clamp(10px, 1vw, 2vw);
     margin-left: 2.1rem;
     color: #E7B4FF;
     font-family: "Inter", sans-serif;
 }
 
 .scope-text{
-    font-size: 1.5rem;
+    font-size: clamp(16px, 1.65vw, 2rem);
     font-weight: 300;
-    margin-top: 1.6rem;
+    margin-top: clamp(10px, 1.8vw, 3vw);
     margin-left: 2.1rem;
     color: #ffffff;
     font-family: "Inter", sans-serif;
@@ -226,7 +231,7 @@ li{
 }
 
 .about-us-title{
-    font-size: 3.8rem;
+    font-size: clamp(32px, 5vw, 7.3vw);
     font-family: "Inter", sans-serif;
     color: #ffffff;
 }
