--- a/css/comente.css
+++ b/css/comente.css
@@ -80,7 +80,8 @@ a {
     color: #A55FE6;
     font-weight: 500;
     border-bottom: 0.18vh solid #A55FE6; 
-    padding-bottom: 0.46vh; }
+    padding-bottom: 0.46vh; 
+}
 
 .introduction {
     display: flex;
@@ -162,9 +163,10 @@ hr {
     font-weight: 500;
     font-size: 8.5vh; 
     color: white;
-    margin-bottom: 3vh; 
-    margin-top: 0; 
+    margin-bottom: 5vh; 
+    margin-top: 18vh; 
     margin-left: 0;
+    width: 100vh;
 }
 
 .comentario .computador img {
@@ -198,7 +200,8 @@ hr {
     display: flex;
     align-items: center; 
     position: relative; 
-    width: 100%;
+    width: 70vh;
+    
 }
 
 .input-icon {
@@ -237,7 +240,7 @@ hr {
 .input-container ::placeholder {
     font-family: "Kantumruy Pro", sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 460;
     font-size: 3vh;
     color: #A55FE6;
 }
@@ -251,12 +254,12 @@ hr {
 .linear-gradient-btn {
     margin-top: 3vh; 
     margin-bottom: 0;
-    width: 32vh; 
-    height: 9vh; 
+    width: 25vh; 
+    height: 7vh; 
     background-image: linear-gradient(to bottom right, #AE8DCD, #A55FE6, #7C3ABA, #571891);
     font-weight: 500;
     color: white;
-    font-size: 3vh; 
+    font-size: 2.4vh; 
     border-radius: 0.28vh; 
     border: none;
     cursor: pointer;
@@ -269,11 +272,15 @@ hr {
     gap: 1.5vh;
     margin-top: 2vh;
     margin-bottom: 2vh; 
+    width: 180vh;
 }
 
 .feedback-text {
     font-size: 2vh;
     color: #E5E5E5;
+    margin-left: 2vh;
+    margin-top: 1vh;
+    width: 40vh;
 }
 
 .estrelas{
@@ -297,6 +304,7 @@ hr {
     color: #A55FE6; 
 }
 
+
 .feedbacks {
     padding: 0 10% 5% 10%;
     margin-top: 8vh;
@@ -310,10 +318,13 @@ hr {
     margin: 0 auto;
 }
 
+.comentario-item.hidden-comment {
+    display: none !important; 
+}
+
 .comentario-item {
     background-color: #141619; 
     border: 0.13vh solid #8D8D8D;
-    border-radius: 1.05vh; 
     padding: 2.6vh;
     box-shadow: 0 0.52vh 1.05vh rgba(0, 0, 0, 0.2);
     display: grid;
@@ -323,7 +334,7 @@ hr {
         "icone autor metadata"
         "icone texto metadata";
     align-items: start;
-    column-gap: 1.5vh; 
+    column-gap: 1.5vh;
 }
 
 .comentario-icone {
@@ -336,11 +347,14 @@ hr {
 .comentario-icone img{
     width: 8vh; 
     height: 8vh;
+    margin-top: 2vh;
     align-items: center;
 }
 
 .comentario-autor-wrapper {
     grid-area: autor;
+    margin-top: 2vh;
+    margin-left: 2vh;
 }
 
 .comentario-autor {
@@ -362,13 +376,15 @@ hr {
 
 .comentario-rating {
     font-size: 4vh;
+    margin-top: 1.5vh;
+    margin-right: 3vh;
 }
 
 .comentario-data {
     position: relative;
     color: #C0C0C0;
     font-size: 1.4vh;
-    right: 4vh;
+    right: 8vh;
 }
 
 .comentario-texto {
@@ -378,11 +394,55 @@ hr {
     line-height: 1.4;
     margin-top: 0.5vh; 
     margin-bottom: 0; 
-    margin-left: 5vh;
+    margin-left: 7vh;
 }
 
 .comentario-estrela {
     margin-right: 0.26vh;
+}
+
+.paginate {
+    display: none; 
+    justify-content: center;
+    align-items: center;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    gap: 1.5vh;
+}
+
+.first, .prev, .next, .last {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 7vh;
+    height: 7vh;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 0.2vh solid transparent; 
+    background: 
+        linear-gradient(to top, #141619, #141619) padding-box, 
+        linear-gradient(135deg, #AE8DCD 0%, #A55FE6 44.76%, #6D00A0 100%) border-box;
+    background-clip: padding-box, border-box;
+}
+
+.first span, .prev span, .next span, .last span {
+    color: #A55FE6; 
+    font-size: 3vh;
+    font-weight: 700;
+    transform: none; 
+    z-index: 2;
+}
+
+.numbers div {
+    color: #E5E5E5;
+    font-size: 2.5vh;
+    padding: 0 1vh;
 }
 
 footer {
@@ -430,6 +490,7 @@ footer {
     margin-right: 2rem;
 }
 
+
 .circulo{
     position: absolute;
     width: 2.5vh;
@@ -460,4 +521,18 @@ footer {
     z-index: -1;
     background: #571476;
     filter: blur(27.78vh);
+}
+
+.c3{
+    position: absolute;
+    border-radius: 50%;
+    background: #A55FE6;
+    width: 1vh;
+    height: 1vh;
+    left: 48.5vh;
+    top: 184vh;
+}
+
+.c4, .c5, .c6, .c7 {
+    display: none !important; 
 }
