--- a/css/preco.css
+++ b/css/preco.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Kantumruy+Pro:wght@100..700&family=Montserrat:wght@100..900&display=swap');
 
+/*=======================GERAL================================*/
+* {
+    margin: clamp(0vw, 0vw, 0px);
+    padding: clamp(0vw, 0vw, 0px);
+    box-sizing: border-box;
+}
+
 body {
     background-color: #141619;
     font-family: "Inter", sans-serif;
     color: #FFFFFF;
     overflow-x: hidden;
-}
-
-* {
-    margin: clamp(0vw, 0vw, 0px);
-    padding: clamp(0vw, 0vw, 0px);
-    box-sizing: border-box;
 }
 
 li {
@@ -20,6 +21,7 @@ li {
 a {
     text-decoration: none;
 }
+/*=======================HEADER================================*/
 
 #nav{
     display: flex;
@@ -95,6 +97,7 @@ a {
     display: none;
 }
 
+/*=======================INTRODUÇÃO================================*/
 
 .introduction {
     display: flex;
@@ -123,6 +126,8 @@ a {
     font-size: clamp(1vw, 1.35vw, 24px);
     line-height: 1.5;
 }
+
+/*=======================PREÇO================================*/
 
 .cards-section {
     display: flex;
@@ -259,6 +264,8 @@ a {
     border: none;
 }
 
+/*=======================FORM================================*/
+
 .form-section {
     display: flex;
     flex-direction: column;
@@ -269,7 +276,7 @@ a {
 }
 
 .form-section h3{
-    font-family: 'Kantumruy';
+    font-family: 'Kantumruy-pro', sans-serif;
     font-style: light;
     font-weight: 200;
     font-size: clamp(1vw, 1.35vw, 24px);
@@ -310,7 +317,7 @@ a {
 .input-container ::placeholder {
     font-family: "Kantumruy Pro", sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 450;
     font-size: clamp(1vw, 1.35vw, 24px);
     color: #A55FE6;
     margin-bottom: clamp(0.2vw, 0.34vw, 5px);
@@ -342,7 +349,7 @@ a {
 
 .input-container.with-icon ::placeholder {
     color: #A55FE6;
-    font-family: Kantumruy;
+    font-family: "Kantumruy Pro", sans-serif;
 }
 
 .submit-button {
@@ -360,6 +367,7 @@ a {
     cursor: pointer;
 }
 
+/*=======================CIRCULOS================================*/
 .c1, .c2, .c3, .c4, .c5 {
     position: absolute;
     filter: blur(clamp(10vw, 16.93vw, 250px));
@@ -411,11 +419,12 @@ a {
     width: clamp(0.8vw, 1.3vw, 18px);
     height: clamp(0.8vw, 1.3vw, 18px);
     border-radius: 50%;
-    right: 18.75vw; 
-    top: clamp(5vw, 7.66vw, 110px);
+    right: vw; 
+    top: clamp(1vw, 3.5vw, 110px);
     background: linear-gradient(180deg, #C2C2C2 0%, #A55FE6 50%, #6D00A0 100%);
 }
 
+/*=======================FOOTER================================*/
 footer {
     display: flex;
     flex-direction: column;
@@ -464,24 +473,117 @@ hr {
     margin-right: clamp(1.5vw, 2.17vw, 32px);
 }
 
-@media screen and (max-width: 1279px) {
+
+/*=======================@MEDIAS================================*/
+@media screen and (max-width: 1920px) and (max-height: 1080px) {
+    .circulo{
+    width: clamp(0.8vw, 1.3vw, 18px);
+    height: clamp(0.8vw, 1.3vw, 18px);
+    right: 10.8vw; 
+    top: clamp(1vw, 3.8vw, 110px);
+    }
+}
+
+@media screen and (max-width: 1280px) and (max-height: 800px) {
     .menu-nav ul li a,
     .menu-nav ul li,
+    .menu-nav ul li a.menu-ativo,
     .comment p {
-        font-size: 1.04vw;
+        font-size: 1.4vw;
+    }
+
+    .comment p {
+        margin-top: 1.5vw;
+        margin-right: 1.3vw;
+    }
+
+    .introduction-text {
+        font-size: 1.55vw;
+        margin-top: 2.1vw;
     }
     
     .subtitle {
-        font-size: 4.17vw;
+        font-size: 5vw;
     }
 
     .cards-section h2, .form-section h2 {
-        font-size: 2.6vw;
+        font-size: 3.5vw;
+
+    }
+
+    .card {
+        width: 31vw;
+        height: 48vw;
+    }
+
+    .card img{
+        margin-top: 0.7vw;
+        width: 3.1vw;
+        height: 3.1vw;
+    }
+
+    .imagemdinheiro {
+        width: 3vw;
+        height: 3vw;
+    }
+
+    .card-title {
+        font-size: 1.7vw;
+        margin-top: 2vw;
+    }
+
+    .card-description {
+        font-size: 1.3vw;
+        margin-top: 1.6vw;
+    }
+
+    .feature-item img {
+        width: 2vw;
+        height: 2vw;
+        margin-right: 0.5vw;
+    }   
+
+    .feature-item p {
+        font-size: 1.2vw;
+        margin-top: 1vw;
     }
 
     .price {
         font-size: 2.5vw;
+        margin-top: 2vw;
     }
+
+    .price-per-month {
+        font-size: 1.2vw;
+    }
+
+    .buy-button {
+        width: 10.3vw;
+        height: 3.8vw;
+        font-size: 1vw;
+    }
+
+        .submit-button {
+        width: 10.3vw;
+        height: 3.8vw;
+        font-size: 1vw;
+    }
+
+    .c3 {
+        width: 20vw;
+        height: 18vw;
+        left: 76vw;
+        top: 113vw;
+        z-index: -1;
+    }
+
+    .circulo{
+    width: clamp(0.8vw, 1.3vw, 18px);
+    height: clamp(0.8vw, 1.3vw, 18px);
+    right: 14vw; 
+    top: clamp(1vw, 4.6vw, 110px);
+    }
+
 }
 
 @media screen and (max-width: 1050px) {
