--- a/css/sime.css
+++ b/css/sime.css
@@ -3,68 +3,79 @@
     margin: 0;
     padding: 0;
 }
+
+html{
+    font-size: 62.5%;
+}
+
+.main-container {
+  width: 80%;
+  max-width: 1440px;
+  margin: 0 auto;
+  margin-top: 3rem;
+}
+
 body{
     background-color: #141619;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
+    font-family: "Inter", sans-serif;
 }
+
 li{
     list-style: none;
+    text-wrap: nowrap;
+}
+
+p{
+    text-wrap: nowrap;
 }
 
 /*HEADER*/
 #nav{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    padding: 30px;
+    align-items: center;
+    font-size: 1.4rem;
+}
+
+.nav-menu{
+    display: flex;
     align-items: center;
 }
 
-.logo img{
-    margin-left: 32px;
-}
-
-.menu-nav{
+.menu-list{
     display: flex;
-    margin-right: 60px;
+    gap: 5rem;
+    margin-right: 8.2rem;
 }
 
-.menu-nav ul{
-    display: flex;
-}
-
-.menu-nav ul li{
+.menu-list li{
     color: #ffffff;
-    margin-right: 50px;
-    font-size: 17px;
-    font-family: "Inter", sans-serif;
     margin-top: 16px;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
 }
 
-.comment{
-    margin-right: 40px;
-}
-
-.comment p{
+.nav-comment p{
     color: #ffffff;
-    font-family: "Inter", sans-serif;
-    font-size: 17px;
     margin-top: 18px;
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
 }
 
+/*INTRODUÇÃO*/
+
 .introduction{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    margin-top: 8%;
+    margin-top: 15%;
 }
 
 .introduction-list{
@@ -74,7 +85,7 @@ li{
 }
 
 .linear-gradient-title{
-    font-size: 5.5rem;
+    font-size: 7.5rem;
     font-weight: 500;
     font-style: normal;
     background-image: linear-gradient(to bottom, #CCF8F8, #44A1A0, #0A4C4C);
@@ -87,7 +98,7 @@ li{
 .subtitle{
     font-weight: 500;
     font-style: normal;
-    font-size: 80px;
+    font-size: 6.8rem;
     color: white;
 }
 .introduction-text{
@@ -96,34 +107,488 @@ li{
     font-style: normal;
     color: #E5E5E5;
     text-align: center;
-    font-size: 20px;
-    line-height: 1.5;
+    font-size: 1.9rem;
+    line-height: 2.8rem;
+    max-width: 40vw;
 
 }
 .linear-gradient-btn{
-    margin-top: 1.5rem ;
-    margin-bottom: 16% ;
-    width: 200px;
-    height: 60px;
+    margin-top: 2rem ;
+    margin-bottom: 20rem;
+    width: clamp(90px, 10.417vw, 12.417vw);
+    height: clamp(30px, 3.125vw, 5.125vw);
     background-image: linear-gradient(to bottom right, #CCF8F8, #44A1A0, #0A4C4C);
     font-weight: 500;
     font-style: normal;
     color: white;
-    font-size: 20px;
+    font-size: 1.6rem;
     border-radius: 3px;
     border: none;
+    text-wrap: nowrap;
 }
+
+/*FUNCIONALIDADES DO SIME*/
+.sime-features-container{
+    display: flex;
+    height: 85vh;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sime-features-title{
+    font-size: 5.6rem;
+    font-weight: 500;
+    color: #ffffff;
+    text-wrap: nowrap;
+}
+
+.sime-feature-cards-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    width: 80%;
+    height: 60%;
+    margin-top: 5rem;
+    gap: 0.3rem;
+    background-image: linear-gradient(to bottom right, #AE8DCD, #A55FE6, #7C3ABA, #571891);
+}
+
+.sime-feature-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    background-color: transparent;
+    justify-content: center;
+    background-color: #141619;
+}
+
+/* Remove borda do topo da primeira linha
+.sime-feature-card:nth-child(-n+3) {
+  border-top: none;
+}
+
+.sime-feature-card:nth-child(3n+1) {
+  border-left: none;
+}
+
+.sime-feature-card:nth-child(n+1) {
+  border-bottom: none;
+}
+
+.sime-feature-card:nth-child(n+2) {
+  border-right: none;
+}
+*/
+
+.sime-feature-card-title{
+    font-size: 2rem;
+    font-weight: 700;
+    margin-top: clamp(10px, 1vw, 2vw);
+    color: #73D4D3;
+}
+
+.sime-feature-card-description{
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-top: clamp(10px, 1vw, 3vw);
+    color: #ffffff;
+    line-height: 1.6;
+    max-width: 80%;
+    text-align: center;
+}
+
+.sime-feature-card-colorful{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    background-color: transparent;
+    justify-content: center;
+    background-image: linear-gradient(to bottom right, #CCF8F8, #44A1A0, #0A4C4C);
+}
+
+.sime-feature-card-title-colorful{
+    font-size: 2rem;
+    font-weight: 700;
+    margin-top: clamp(10px, 1vw, 2vw);
+    color: #fff;
+}
+
+
+/*PÚBLICO SIME*/
+.sime-public-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5%;
+}
+
+.sime-public-title{
+    font-size: 5.6rem;
+    font-weight: 500;
+    color: #ffffff;
+    text-wrap: nowrap;
+}
+
+.sime-public-description{
+    font-size: 1.8rem;
+    font-weight: 300;
+    margin-top: clamp(10px, 1vw, 3vw);
+    color: #ffffff;
+    line-height: 1.6;
+    max-width: 55%;
+    text-align: center;
+}
+
+.sime-public-examples-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 5rem;
+    gap: 3rem;
+}
+
+.sime-public-examples-container p{
+    font-size: 3.5rem;
+    font-weight: 400;
+}
+
+.sime-public-examples-container img{
+    width: 40%;
+    height: auto;
+}
+
+.sime-public-examples-description{
+    font-size: 1.8rem;
+    font-weight: 300;
+    color: #ffffff;
+    line-height: 1.6;
+    max-width: 50%;
+    text-align: right;
+}
+
+.sime-public-examples-description-text{
+    max-width: 80%;
+    margin-left: auto;
+    margin-top: 3rem;
+}
+
+/*MANUTENÇÃO DIGITALIZADA*/
+.digitalized-maintenance-container{
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+}
+
+
+.digitalized-maintenance-container img{
+    width: 40%;
+    height: auto;
+}
+
+.digitalized-maintenance-description{
+    display: flex;
+    flex-direction: column;
+}
+.digitalized-maintenance-title{
+    font-size: 3rem;
+    font-weight: 300;
+    color: #ffffff;
+}
+.digitalized-maintenance-description-text{
+    font-size: 1.9rem;
+    font-weight: 300;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+    max-width: 75%;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.digitalized-maintenance-description-msg{
+    font-size: 1.8rem;
+    font-weight: 500;
+    margin-top: 2rem;
+    color: #ffffff;
+}
+
+.digitalized-maintenance-description-click{
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-top: 2.2rem;
+    color: #E7B4FF;
+}
+
+/*TECNOLOGIAS*/
+.technologies-used-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 15%;
+}
+
+.technologies-used-container img{
+    width: 35%;
+    height: auto;
+    margin-right: 3rem;
+}
+.technologies-used-title{
+    font-size: 5.8rem;
+    font-weight: 500;
+    margin-top: 1rem;
+    color: #ffffff;
+    line-height: 1.4;
+    letter-spacing: 0.2rem;
+    max-width: 40%;
+}
+
+
+/*VÍDEOS*/
+.explanatory-video-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15%;
+}
+.explanatory-video-title{
+    font-size: 5.8rem;
+    font-weight: 400;
+    margin-top: 1rem;
+    color: #ffffff;
+}
+.explanatory-video{
+    width: 80%;
+    height: 45rem;
+    background-color: transparent;
+    border: 2px solid #A55FE6;
+    margin-top: 3rem;
+    border-radius: 8px;
+}
+
+.explanatory-video-comments{
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-top: 2rem;
+    color: #fff;
+}
+
+/*POR QUE ESCOLHER O SIME*/
+.why-choose-sime-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15%;
+}
+.why-choose-sime-title{
+    font-size: 5.6rem;
+    font-weight: 500;
+    color: #ffffff;
+    text-wrap: nowrap;
+}
+
+.why-choose-sime-description{
+    font-size: 1.9rem;
+    font-weight: 300;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+    max-width: 55%;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+
+/*VERIFICAR VALORES*/
+.verify-values-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+.verify-values-container-description{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 10%;
+    align-items: flex-end;
+}
+
+.verify-values-linear-gradient-btn{
+    margin-top: 2rem ;
+    margin-bottom: 10rem;
+    width: clamp(90px, 10.417vw, 12.417vw);
+    height: clamp(30px, 3.125vw, 5.125vw);
+    background-image: linear-gradient(to bottom right, #AE8DCD, #A55FE6, #7C3ABA, #571891);
+    font-weight: 500;
+    font-style: normal;
+    color: white;
+    font-size: 1.6rem;
+    border-radius: 3px;
+    border: none;
+    text-wrap: nowrap;
+}
+
+.verify-values-icon-dollar{
+    width: 20%;
+    height: auto;
+    margin-bottom: 20rem;
+}
+
+.verify-values-icon-coin{
+    width: 20%;
+    height: auto;
+    margin-top: 20rem;
+}
+
+.verify-values-title{
+    font-size: 5.6rem;
+    font-weight: 500;
+    color: #ffffff;
+    text-wrap: nowrap;
+}
+
+.verify-values-description-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.verify-values-description{
+    font-size: 1.9rem;
+    font-weight: 300;
+    color: #ffffff;
+    font-family: "Inter", sans-serif;
+    line-height: 1.6;
+    max-width: 70%;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    text-align: center
+}
+
 
 hr{
     border-color: rgb(143, 140, 140);
     border-width: 1px;
 }
+
+.lights-container {
+  width: 100%;
+  height: 100%;
+}
+
+.c1, .c2, .c3, .c4, .c5, .c6, .c7, .c8, .c9 {
+  position: absolute;
+  z-index: -1;
+}
+
+.c1 {
+    width: 40vw;
+    height: 79vh;
+    left: 51vw;
+    top: 440px;
+    background: #872db2;
+    filter: blur(20vw);
+    border-radius: 80%;
+}
+.c2 {
+    width: 60vw;
+    height: 119vh;
+    left: -18vw;
+    top: 1270px;
+    background: #44A1A0;
+    filter: blur(10vw);
+    border-radius: 80%;
+}
+.c3 {
+    width: 50vw;
+    height: 92vh;
+    left: 17vw;
+    top: 1670px;
+    background: #A55FE6;
+    filter: blur(18vw);
+    border-radius: 80%;
+}
+.c4 {
+    width: 40vw;
+    height: 80vh;
+    left: 52vw;
+    top: 2950px;
+    background: #44A1A0;
+    border-radius: 80%;
+    filter: blur(10vw);
+}
+
+.c5 {
+    width: 25vw;
+    height: 45vh;
+    left: 20vw;
+    top: 4487px;
+    background: #44A1A0;
+    border-radius: 80%;
+    filter: blur(8vw);
+    opacity: 60%;
+}
+
+
+.c6 {
+    width: 32vw;
+    height: 30vh;
+    left: 56vw;
+    top: 4390px;
+    background: #7a4574;
+    filter: blur(5vw);
+    border-radius: 80%;
+    transform: rotate(16deg);
+}
+
+.c7 {
+    width: 25vw;
+    height: 35vh;
+    left: 60vw;
+    top: 5145px;
+    background: #4b3e8a;
+    border-radius: 80%;
+    filter: blur(4.5vw);
+}
+.c8 {
+    width: 10vw;
+    height: 11vh;
+    left: 71vw;
+    top: 5265px;
+    background: #fff;
+    border-radius: 80%;
+    filter: blur(3.5vw);
+    opacity: 60%;
+}
+
+.c9 {
+    width: 10vw;
+    height: 11vh;
+    left: 58vw;
+    top: 5125px;
+    background: #ffe44d;
+    border-radius: 80%;
+    filter: blur(3.5vw);
+    opacity: 60%;
+}
+
+
 /*FOOTER*/
 footer{
     display: flex;
     flex-direction: column;
-    margin: 6% 10% 0% 14%;
-    padding: 0% 0% 5% 0%;
+    margin: 4% 10% 0% 14%;
+    padding: 0% 0% 2% 0%;
+    width: 80%;
+    max-width: 1440px;
 
 }
 .info{
@@ -140,8 +605,7 @@ footer{
 .footer-title{
     color: white;
     font-weight: 400;
-    font-size: 1.2rem;
-    font-family: "Inter", sans-serif;
+    font-size: 2rem;
     margin-bottom: 1.5rem;
 
 }
@@ -149,8 +613,7 @@ footer{
 .footer-subtitle{
     color: #E5E5E5;
     font-weight: 400;
-    font-size: 1rem;
-    font-family: "Inter", sans-serif;
+    font-size: 1.7rem;
     margin-bottom: 1rem;
 }
 
@@ -162,9 +625,385 @@ footer{
     justify-content: center;
 }
 .contact-icons img{
-    width: 1.8rem;
-    margin-top: 10%;
+    width: 3rem;
+    margin-top: 4%;
     margin-right: 2rem;
 }
 
+
+/*LAPTOP M*/
+@media (max-width: 1024px){}
+
+/*MOBILE L*/
+@media (max-width: 428px){
+    html{font-size: 45%;}
+
+    .main-container {
+        width: 90%;
+        max-width: 425px;
+        margin: 0 auto;
+        margin-top: 3rem;
+    }
+
+    #nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    /* font-size: 1.4rem; */
+}
+.introduction-text{
+    max-width: 370px;
+}
+
+.about-us-text{
+    max-width: 350px;
+}
+
+.comments-text{
+    max-width: 300px;
+}
+
+.linear-gradient-btn {
+    margin-top: 3rem;
+    margin-bottom: 10rem;
+}
+
+.sime-features-title {
+    font-size: 4.8rem;
+}
+
+.sime-features-container{
+    height: 120vh;
+}
+
+.sime-public-examples-container {
+    flex-direction: column;
+}
+
+.sime-public-examples-description {
+    max-width: 100%;
+    margin-right: 10rem;
+}
+
+.digitalized-maintenance-container {
+    margin-top: 15%;
+    flex-direction: column;
+
+}
+
+.sime-public-title {
+    font-size: 4.8rem;
+}
+
+.technologies-used-container {
+    flex-direction: column;
+}
+
+.technologies-used-title {
+    letter-spacing: 0rem;
+    max-width: 100%;
+    text-wrap: nowrap;
+    margin-bottom: 5%;
+    font-size: 5rem;
+}
+
+.explanatory-video-title {
+    font-size: 5rem;
+}
+
+.explanatory-video {
+    width: 78%;
+    height: 25rem;
+}
+
+.sime-public-examples-container p{
+    font-size: 3rem;
+}
+
+
+.why-choose-sime-title {
+    font-size: 4.8rem;
+}
+
+.why-choose-sime-description {
+    max-width: 88%;
+    margin-bottom: 0rem;
+    text-align: center;
+}
+
+.verify-values-title {
+    font-size: 5rem;
+}
+
+.sime-public-description {
+    max-width: 100%;
+}
+
+.digitalized-maintenance-description {
+    align-items: center;
+}
+
+.digitalized-maintenance-description-text {
+    max-width: 95%;
+    text-align: center;
+}
+
+.verify-values-container-description {
+    flex-direction: column;
+}
+
+.verify-values-icon-dollar {
+    width: 12%;
+    margin-bottom: 0rem;
+    position: relative;
+    z-index: 1;
+    top: 8rem;
+    left: 1rem;
+}
+
+.verify-values-icon-coin {
+    width: 12%;
+    margin-top: 0rem;
+    position: relative;
+    z-index: 1;
+    top: 2rem;
+    left: -44rem;
+}
+
+.verify-values-description {
+    margin-top: 4rem;
+    margin-bottom: 0rem;
+    max-width: 95%;
+
+}
+
+
+
+.verify-values-linear-gradient-btn {
+    margin-top: 0rem;
+}
+
+.c1 {
+    width: 42vw;
+    height: 31vh;
+    top: 228px;
+    filter: blur(25vw);
+}
+
+.c2 {
+    width: 60vw;
+    height: 40vh;
+    top: 1322px;
+    filter: blur(20vw);
+}
+
+.c3 {
+        width: 50vw;
+        height: 35vh;
+        left: 24vw;
+        top: 1495px;
+        background: #A55FE6;
+        filter: blur(18vw);
+        border-radius: 80%;
+}
+
+.c4 {
+        width: 40vw;
+        height: 30vh;
+        left: 29vw;
+        top: 2405px;
+        background: #44A1A0;
+        border-radius: 80%;
+        filter: blur(10vw);
+    }
+
+.c5 {
+        width: 33vw;
+        height: 26vh;
+        left: 4vw;
+        top: 3011px;
+        background: #44A1A0;
+        border-radius: 80%;
+        filter: blur(8vw);
+        opacity: 60%;
+    }
+
+
+    .c6 {
+        width: 39vw;
+        height: 13vh;
+        left: 56vw;
+        top: 3000px;
+        background: #7a4574;
+        filter: blur(5vw);
+        border-radius: 80%;
+        transform: rotate(16deg);
+    }
+
+    .c7 {
+        width: 33vw;
+        height: 25vh;
+        left: 64vw;
+        top: 3418px;
+        background: #4b3e8a;
+        border-radius: 80%;
+        filter: blur(4.5vw);
+    }
+
+.c8 {
+        width: 10vw;
+        height: 11vh;
+        left: 80vw;
+        top: 3489px;
+        background: #fff;
+        border-radius: 80%;
+        filter: blur(5vw);
+        opacity: 60%;
+    }
+
+    .c9 {
+        width: 15vw;
+        height: 11vh;
+        left: 61vw;
+        top: 3407px;
+        background: #ffe44d;
+        border-radius: 80%;
+        filter: blur(6vw);
+        opacity: 60%;
+    }
+
+
+}
+/*MOBILE M*/
+@media (max-width: 378px){
+    html{font-size: 38.5%;}
+
+    .main-container {
+        width: 100%;
+        max-width: 378px;
+        margin: 0 auto;
+        margin-top: 3rem;
+    }
+
+    .introduction-text {
+        max-width: 325px;
+    }
+
+    
+    .verify-values-icon-dollar {
+        width: 10%;
+        top: 8rem;
+        left: -2rem;
+    }
+
+.verify-values-icon-coin {
+        width: 10%;
+        top: 1rem;
+        left: -50rem;
+    }
+
+        .digitalized-maintenance-description-text {
+        max-width: 90%;
+        text-align: center;
+    }
+
+        .verify-values-description {
+        max-width: 90%;
+    }
+
+
+.c1 {
+    width: 42vw;
+    height: 31vh;
+    top: 228px;
+    filter: blur(25vw);
+}
+
+.c2 {
+    width: 60vw;
+    height: 40vh;
+    top: 1228px;
+    filter: blur(20vw);
+}
+
+.c3 {
+        width: 50vw;
+        height: 35vh;
+        left: 24vw;
+        top: 1338px;
+        background: #A55FE6;
+        filter: blur(18vw);
+        border-radius: 80%;
+}
+
+.c4 {
+        width: 40vw;
+        height: 30vh;
+        left: 29vw;
+        top: 2220px;
+        background: #44A1A0;
+        border-radius: 80%;
+        filter: blur(10vw);
+    }
+
+.c5 {
+        width: 33vw;
+        height: 26vh;
+        left: 4vw;
+        top: 2772px;
+        background: #44A1A0;
+        border-radius: 80%;
+        filter: blur(10vw);
+        opacity: 60%;
+    }
+
+
+    .c6 {
+        width: 39vw;
+        height: 13vh;
+        left: 56vw;
+        top: 2750px;
+        background: #7a4574;
+        filter: blur(5vw);
+        border-radius: 80%;
+        transform: rotate(16deg);
+    }
+
+    .c7 {
+        width: 33vw;
+        height: 25vh;
+        left: 64vw;
+        top: 3080px;
+        background: #4b3e8a;
+        border-radius: 80%;
+        filter: blur(4.5vw);
+    }
+
+.c8 {
+        width: 10vw;
+        height: 11vh;
+        left: 80vw;
+        top: 3162px;
+        background: #fff;
+        border-radius: 80%;
+        filter: blur(5vw);
+        opacity: 60%;
+    }
+
+    .c9 {
+        width: 15vw;
+        height: 11vh;
+        left: 61vw;
+        top: 3074px;
+        background: #ffe44d;
+        border-radius: 80%;
+        filter: blur(6vw);
+        opacity: 60%;
+    }
+
+
+
+
+}
 
